Fix map overflow, change header size

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,10 +12,11 @@
 }
 
 .header-text {
-  background-image: linear-gradient(180deg, #ffffff 30%, #283048 100%);
+  background-image: linear-gradient(180deg, #ffffff 40%, #7b7a7a 100%);
+  /* background-image: linear-gradient(45deg, #0766f3 13%, #c7d9f8 81%); */
   color: transparent;
   background-clip: text;
-  font-size: 100px;
+  font-size: 60px;
 
   padding: 10px;
 }
