--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -2,10 +2,10 @@
   width: 100%;
   height: 500px;
 
-  border: 5px solid grey;
+  /* outline: 5px solid grey; */
   border-radius: 20px;
 
-  padding: 10px;
+  /* padding: 10px; */
 
-  display: flex;
+  position: relative;
 }
